Add logging config into local thumbor.conf

--- a/thumbor.conf
+++ b/thumbor.conf
@@ -1,8 +1,36 @@
+# Local thumbor conf
 ################################### Logging ####################################
 
 ## Logging configuration as json
 ## Defaults to: None
-#THUMBOR_LOG_CONFIG = None
+THUMBOR_LOG_CONFIG = {
+  'version': 1,
+  'disable_existing_loggers': False,
+  'formatters': {
+    'standard': {
+      'format': '%(asctime)s %(name)s:%(levelname)s %(message)s'
+    },
+  },
+  'handlers': {
+    'console': {
+      'level': 'DEBUG',
+      'class': 'logging.StreamHandler',
+      'formatter': 'standard'
+    },
+    'file': {
+      'level': 'DEBUG',
+      'class': 'logging.FileHandler',
+      'formatter': 'standard',
+      'filename': 'thumbor.log',
+      'mode': 'a',
+    },
+  },
+  'root': {
+    'handlers': ['console', 'file'],
+    'level': 'DEBUG',
+    'propagate': True,
+  }
+}
 
 ## Log Format to be used by thumbor when writing log messages.
 ## Defaults to: '%(asctime)s %(name)s:%(levelname)s %(message)s'
