--- a/thumbor.conf
+++ b/thumbor.conf
@@ -180,7 +180,7 @@ THUMBOR_LOG_CONFIG = {
 ## The metrics backend thumbor should use to measure internal actions. This must
 ## be the full name of a python module (python must be able to import it)
 ## Defaults to: 'thumbor.metrics.logger_metrics'
-#METRICS = 'thumbor.metrics.logger_metrics'
+METRICS = 'thumbor.metrics.statsd_metrics'
 
 ## The loader thumbor should use to load the original image. This must be the
 ## full name of a python module (python must be able to import it)
@@ -254,15 +254,15 @@ THUMBOR_LOG_CONFIG = {
 
 ## Host to send statsd instrumentation to
 ## Defaults to: None
-#STATSD_HOST = None
+STATSD_HOST = 'localhost'
 
 ## Port to send statsd instrumentation to
 ## Defaults to: 8125
-#STATSD_PORT = 8125
+STATSD_PORT = 8125
 
 ## Prefix for statsd
 ## Defaults to: None
-#STATSD_PREFIX = None
+STATSD_PREFIX = 'tubi.thumbor'
 
 ################################################################################
 
