Only convert PNG to JPEG. Set progressive based on conf.

--- a/thumbor.conf
+++ b/thumbor.conf
@@ -363,8 +363,7 @@ STATSD_PREFIX = 'tubi.thumbor'
 
 ## The root path where the File Storage will try to find images
 ## Defaults to: '/var/folders/w_/t0h3rg410_d2qc2gxyr5x3xh0000gn/T/thumbor/storage'
-#FILE_STORAGE_ROOT_PATH = '/var/folders/w_/t0h3rg410_d2qc2gxyr5x3xh0000gn/T/thumbor/storage'
-
+FILE_STORAGE_ROOT_PATH = '/Users/rogerhom/projects/romantico/store' 
 ################################################################################
 
 
@@ -581,10 +580,11 @@ FILTERS = [
 ## Path where the Result storage will store generated images
 ## Defaults to: '/var/folders/w_/t0h3rg410_d2qc2gxyr5x3xh0000gn/T/thumbor/result_storage'
 #RESULT_STORAGE_FILE_STORAGE_ROOT_PATH = '/var/folders/w_/t0h3rg410_d2qc2gxyr5x3xh0000gn/T/thumbor/result_storage'
-
+RESULT_STORAGE_FILE_STORAGE_ROOT_PATH = '/Users/rogerhom/projects/romantico/result_store'
+ 
 ## Indicates whether unsafe requests should also be stored in the Result Storage
 ## Defaults to: False
-#RESULT_STORAGE_STORES_UNSAFE = False
+RESULT_STORAGE_STORES_UNSAFE = True 
 
 ################################################################################
 
